# hmatrix-sundials

./: ChangeLog.md  README.md  default.nix  hmatrix-sundials.cabal  release.nix  shell.nix  stack.yaml
.circleci/: config.yml
CustomSundials/: default.nix
benchmark/: benchmark.hs
src/: Main.hs  helpers.c  helpers.h
src/Numeric/: Sundials.hs
src/Numeric/Sundials/: ARKode.hs  Arkode.hsc  CVode.hs  Common.hs  Foreign.hsc  ODEOpts.hs  Types.hs
src/Numeric/Sundials/ARKode/: ODE.hs
src/Numeric/Sundials/CVode/: ODE.hs
test/: Main.hs
tests/: test.hs
tests/golden/ARKode/SDIRK_5_3_4/: Bounded_sine.json  Cascading_events.json  Discontinuous_derivative.json  Exponential.json  Modulus_recordEvent=False_initStep=1-eps.json  Modulus_recordEvent=False_initStep=1.json  Modulus_recordEvent=False_initStep=Nothing.json  Modulus_recordEvent=True_initStep=1-eps.json  Modulus_recordEvent=True_initStep=1.json  Modulus_recordEvent=True_initStep=Nothing.json  Robertson.json  Stiffish.json  Time aliasing; record=False.json  Time aliasing; record=True.json  Time grid test.json  Time-based events.json
tests/golden/ARKode/SDIRK_5_3_4/Simultaneous_events/: maxEvents=1_eventRecord=False,False_stopSolver=False,False.json  maxEvents=1_eventRecord=False,False_stopSolver=True,True.json  maxEvents=1_eventRecord=False,True_stopSolver=False,False.json  maxEvents=1_eventRecord=True,False_stopSolver=False,False.json  maxEvents=1_eventRecord=True,False_stopSolver=False,True.json  maxEvents=1_eventRecord=True,True_stopSolver=False,True.json  maxEvents=1_eventRecord=True,True_stopSolver=True,False.json  maxEvents=1_eventRecord=True,True_stopSolver=True,True.json  maxEvents=2_eventRecord=False,True_stopSolver=False,True.json  maxEvents=2_eventRecord=False,True_stopSolver=True,False.json  maxEvents=2_eventRecord=True,False_stopSolver=False,False.json  maxEvents=2_eventRecord=True,False_stopSolver=True,False.json  maxEvents=2_eventRecord=True,True_stopSolver=True,False.json  maxEvents=2_eventRecord=True,True_stopSolver=True,True.json  maxEvents=3_eventRecord=False,False_stopSolver=False,True.json  maxEvents=3_eventRecord=False,False_stopSolver=True,False.json  maxEvents=3_eventRecord=False,True_stopSolver=False,False.json  maxEvents=3_eventRecord=False,True_stopSolver=True,False.json  maxEvents=3_eventRecord=True,True_stopSolver=False,False.json
tests/golden/ARKode/TRBDF2_3_3_2/: Bounded_sine.json  Cascading_events.json  Discontinuous_derivative.json  Exponential.json  Modulus_recordEvent=False_initStep=1-eps.json  Modulus_recordEvent=False_initStep=1.json  Modulus_recordEvent=False_initStep=Nothing.json  Modulus_recordEvent=True_initStep=1-eps.json  Modulus_recordEvent=True_initStep=1.json  Modulus_recordEvent=True_initStep=Nothing.json  Robertson.json  Stiffish.json  Time aliasing; record=False.json  Time aliasing; record=True.json  Time grid test.json  Time-based events.json
tests/golden/ARKode/TRBDF2_3_3_2/Simultaneous_events/: maxEvents=0_eventRecord=True,True_stopSolver=True,False.json  maxEvents=1_eventRecord=False,False_stopSolver=False,False.json  maxEvents=1_eventRecord=False,False_stopSolver=True,False.json  maxEvents=1_eventRecord=False,True_stopSolver=True,False.json  maxEvents=1_eventRecord=True,False_stopSolver=False,False.json  maxEvents=1_eventRecord=True,True_stopSolver=False,False.json  maxEvents=1_eventRecord=True,True_stopSolver=False,True.json  maxEvents=1_eventRecord=True,True_stopSolver=True,False.json  maxEvents=2_eventRecord=False,False_stopSolver=True,False.json  maxEvents=2_eventRecord=False,True_stopSolver=True,False.json  maxEvents=2_eventRecord=False,True_stopSolver=True,True.json  maxEvents=2_eventRecord=True,False_stopSolver=False,False.json  maxEvents=2_eventRecord=True,False_stopSolver=True,True.json  maxEvents=2_eventRecord=True,True_stopSolver=False,False.json  maxEvents=2_eventRecord=True,True_stopSolver=False,True.json  maxEvents=3_eventRecord=False,False_stopSolver=False,True.json  (+4 more)
tests/golden/CVode/ADAMS/: Bounded_sine.json  Discontinuous_derivative.json  Exponential.json  Modulus_recordEvent=False_initStep=1-eps.json  Modulus_recordEvent=False_initStep=1.json  Modulus_recordEvent=False_initStep=Nothing.json  Modulus_recordEvent=True_initStep=1-eps.json  Modulus_recordEvent=True_initStep=1.json  Modulus_recordEvent=True_initStep=Nothing.json  Robertson.json  Stiffish.json
tests/golden/CVode/BDF/: Bounded_sine.json  Cascading_events.json  Exponential.json  Modulus_recordEvent=False_initStep=1-eps.json  Modulus_recordEvent=False_initStep=Nothing.json  Modulus_recordEvent=True_initStep=1-eps.json  Modulus_recordEvent=True_initStep=1.json  Modulus_recordEvent=True_initStep=Nothing.json  Robertson.json  Stiffish.json  Time aliasing; record=True.json  Time-based events.json
tests/golden/canonical/: Bounded_sine.json  Cascading_events.json  Discontinuous_derivative.json  Exponential.json  Robertson.json  Stiffish.json  Time aliasing; record=False.json  Time grid test.json
tests/golden/canonical/Simultaneous_events/: maxEvents=0_eventRecord=False,True_stopSolver=False,False.json  maxEvents=1_eventRecord=True,False_stopSolver=False,False.json  maxEvents=2_eventRecord=False,False_stopSolver=True,True.json  maxEvents=2_eventRecord=False,True_stopSolver=True,False.json  maxEvents=2_eventRecord=True,True_stopSolver=False,False.json  maxEvents=3_eventRecord=False,True_stopSolver=False,True.json  maxEvents=3_eventRecord=True,False_stopSolver=False,False.json  maxEvents=3_eventRecord=True,False_stopSolver=False,True.json  maxEvents=3_eventRecord=True,True_stopSolver=False,False.json
(+12 files in other folders)
