name:                hmatrix-sundials
version:             0.20.0.0
synopsis:            hmatrix interface to sundials
description:         An interface to the solving suite SUNDIALS.
license:             BSD3
license-file:        LICENSE
author:              Dominic Steinitz
maintainer:          Roman Cheplyaka
copyright:           Dominic Steinitz 2018, Novadiscovery 2019
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md, diagrams/*.png
extra-doc-files:     diagrams/*.png
cabal-version:       >=1.18


library
  build-depends:       base >=4.10,
                       inline-c >=0.6,
                       vector >=0.12,
                       template-haskell >=2.12,
                       containers >=0.5,
                       split >=0.2,
                       hmatrix>=0.18,
                       deepseq,
                       mtl,
                       bytestring,
                       text,
                       aeson,
                       katip
  extra-libraries:     sundials_arkode,
                       sundials_cvode
  other-extensions:    QuasiQuotes
  hs-source-dirs:      src
  exposed-modules:     Numeric.Sundials.Types,
                       Numeric.Sundials.ARKode.ODE,
                       Numeric.Sundials.CVode.ODE
  other-modules:       Numeric.Sundials.Arkode
  c-sources:           src/helpers.c
  default-language:    Haskell2010
  default-extensions:  NondecreasingIndentation

test-suite hmatrix-sundials-testsuite
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base,
                       inline-c,
                       vector,
                       template-haskell,
                       containers,
                       split,
                       hmatrix,
                       plots,
                       diagrams-lib,
                       diagrams-rasterific,
                       lens,
                       hspec,
                       hmatrix-sundials,
                       katip
  hs-source-dirs:      test
  extra-libraries:     sundials_arkode,
                       sundials_cvode
  c-sources:           src/helpers.c
  default-language:    Haskell2010
  default-extensions:  NondecreasingIndentation

benchmark benchmark
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    benchmark
  main-is:
    benchmark.hs
  default-language:
    Haskell2010
  build-depends:
    base,
    hmatrix,
    hmatrix-sundials,
    clock >= 0.7.1,
    optparse-applicative,
    cassava,
    bytestring
  ghc-options:
    -Wall -Wno-name-shadowing
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleInstances
    RecordWildCards
    NamedFieldPuns
